add release notes placeholder

--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -17,7 +17,7 @@ description: >-
   - Customize and share your notes effortlessly. With our intuitive sharing features, you can easily collaborate and distribute your notes with others.
 
   - RESTful API for third-party services. Embrace the power of integration and unleash new possibilities with our RESTful API support.
-
+releaseNotes: ""
 developer: Memos
 website: https://www.usememos.com/
 dependencies: []
