change user from root to umbrel

--- a/memos/docker-compose.yml
+++ b/memos/docker-compose.yml
@@ -9,6 +9,7 @@ services:
 
   main:
     image: neosmemo/memos:0.22.0@sha256:2d6dc796dcd89e5787fe6c43c4e71c0e577d29f35ef4f5ab67240a3e70adaa58
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
