--- a/technitium-dns/docker-compose.yml
+++ b/technitium-dns/docker-compose.yml
@@ -3,7 +3,6 @@ version: "3.7"
 services:
   dns-server:
     image: technitium/dns-server:12.1@sha256:f5de7eea6dd85f85656a1ea7584c6af0619bb8b1fa83e5c7992fcf38b76c7ccf
-
     network_mode: host 
     environment:
       - DNS_SERVER_DOMAIN=${DEVICE_DOMAIN_NAME} #The primary domain name used by this DNS Server to identify itself.
@@ -27,5 +26,5 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/etc/dns
     restart: on-failure
-    sysctls:
-      - net.ipv4.ip_local_port_range=1024 65000
+    # sysctls:
+    #   - net.ipv4.ip_local_port_range=1024 65000
