Capitalize app name

--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: technitium-dns
 category: networking
-name: Technitium DNS server
+name: Technitium DNS Server
 version: "12.1"
 tagline: Block ads & malware at DNS level for your entire network!
 description: >-
