tweak tagline and description

--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -3,9 +3,10 @@ id: technitium-dns
 category: networking
 name: Technitium DNS Server
 version: "12.1"
-tagline: Block ads & malware at DNS level for your entire network!
+tagline: Block ads & malware at the DNS level for your entire network
 description: >-
-  Technitium DNS Server is an open source authoritative as well as recursive DNS server that can be used for self hosting a DNS server for privacy & security. It works out-of-the-box with no or minimal configuration and provides a user friendly web console accessible using any modern web browser.
+  Technitium DNS Server is an open source authoritative, as well as recursive, DNS server that can be used for self hosting a DNS server for privacy & security.
+  It works out-of-the-box with no or minimal configuration.
 
 developer: Shreyas Zare
 website: https://technitium.com/dns/
