add release notes placeholder

--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -7,7 +7,7 @@ tagline: Block ads & malware at the DNS level for your entire network
 description: >-
   Technitium DNS Server is an open source authoritative, as well as recursive, DNS server that can be used for self hosting a DNS server for privacy & security.
   It works out-of-the-box with no or minimal configuration.
-
+releaseNotes: ""
 developer: Shreyas Zare
 website: https://technitium.com/dns/
 dependencies: []
