--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -8,7 +8,7 @@ description: >-
   Technitium DNS Server is an open source authoritative, as well as recursive, DNS server that can be used for self hosting a DNS server for privacy & security.
   It works out-of-the-box with no or minimal configuration.
 releaseNotes: ""
-developer: Shreyas Zare
+developer: Technitium
 website: https://technitium.com/dns/
 dependencies: []
 repo: https://github.com/TechnitiumSoftware/DnsServer
