--- a/pocketbase/umbrel-app.yml
+++ b/pocketbase/umbrel-app.yml
@@ -34,8 +34,8 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/1082
 repo: https://github.com/pocketbase/pocketbase
 support: https://github.com/pocketbase/pocketbase/discussions
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
-  - 4.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
+  - 4.jpg
 path: /_/
