change gallery image filetypes to .jpg

--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -41,9 +41,8 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/1083
 repo: https://github.com/umami-software/umami
 support: https://github.com/umami-software/umami/discussions
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
-  - 4.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 defaultUsername: admin
 defaultPassword: umami
