small tweaks to manifest

--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: umami
 name: Umami
-tagline: Umami is a simple, fast, privacy-focused alternative to Google Analytics
+tagline: Simple, fast, privacy-focused alternative to Google Analytics
 category: developer
 version: "2.11.3"
 port: 25727
@@ -14,9 +14,9 @@ description: >-
 
   ⚠️ Note
 
-  Change the default password by clicking on the avatar in the top right corner and on 'profile'.
+  Change the default password by clicking on the avatar in the top right corner and then 'profile'.
 
-  You may need to expose Umami to the web in order to use the app in it's intended way with websites using Umami.
+  You may need to expose Umami to the web in order to use the app in its intended way with websites.
 
   The easiest way to do this is to use the 'Cloudflare Tunnel' app from the umbrel app store, and expose the Umami app using your own domain.
 
