add missing keys to manifest

--- a/wireguard/umbrel-app.yml
+++ b/wireguard/umbrel-app.yml
@@ -38,6 +38,8 @@ description: >-
   📐 Well Defined & Thoroughly Considered
   
   WireGuard is the product of careful academic consideration, with a clearly defined protocol and well-considered design decisions.
+releaseNotes: ""
+dependencies: []
 developer: Emile Nijssen
 website: https://github.com/wg-easy/wg-easy
 submitter: Sharknoon
