change gallery image filetypes

--- a/wireguard/umbrel-app.yml
+++ b/wireguard/umbrel-app.yml
@@ -47,6 +47,6 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/1084
 repo: https://github.com/wg-easy/wg-easy
 support: https://github.com/wg-easy/wg-easy/discussions
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
