Added missing release notes

--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -27,3 +27,4 @@ defaultUsername: ""
 defaultPassword: ""
 submitter: highghlow
 submission: https://github.com/getumbrel/umbrel/pull/1040
+releaseNotes: ""
