--- a/teamspeak/umbrel-app.yml
+++ b/teamspeak/umbrel-app.yml
@@ -6,104 +6,58 @@ category: social
 version: "3.13.7"
 port: 50371
 description: >-
-  This is the best app you have ever seen. It does everything you ever wanted and more.
+  Use crystal clear sound to communicate with your team mates cross-platform with military-grade security, lag-free performance &
+  unparalleled reliability and uptime.
+  
+
+  🎙️ Unrivaled voice quality
+
+  Get crystal-clear, lag-free communication with our integrated automatic microphone volume adjustment, background noise reduction
+  and echo cancellation. 
 
 
-  It also supports new lines.
+  🎭 Privacy Build-in
 
-# The developer of the app. This is not necessarily the submitter but the actual developer of the app.
-developer: John Doe
+  Designed with privacy in mind, we do not have access to your voice or text chat data, and there is no sign-up required.
 
-# The website of the app. This should be the official website of the app.
-website: http://example.com
 
-# The submitter of the app. This is the person who submits the app to the App Store (probably you).
-submitter: Jane Doe
+  🛡️ SECURITY LIKE NO OTHER
 
-# The submission URL. This should be a link to the pull request or the commit that adds the app to the App Store.
+  Integrated Military-Grade Security as standard. With TS3, AES-based encryption can be enabled for the entire server, or even just
+  specific channels.
+
+
+  🎚️ Advanced permissions system
+
+  Be in complete control with our powerful, best-in-market, hierarchical permission system. Decide who can talk, who can join channels
+  and much more.
+
+
+  🔊 Stunning surround sound
+
+  Be at the heart of the game with Positional Audio. Hear your team mates within a 360º soundscape, giving you the edge when executing
+  your next game plan.
+
+
+  🎨 Limitless customization
+
+  Make TeamSpeak your own and customize your client to meet your personal style with the included plugins, sound & icon packs, and
+  themes. Choose from hundreds of add-ons created by the user community, or even create your own.
+
+developer: TeamSpeak Systems, Inc.
+website: https://www.teamspeak.com
+submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
-
-# The repository of the app. This should be a link to the repository of the app. (optional)
-#repo: https://github.com/<user>/<repo>
-
-# The support URL. This should be a link to the support page of the app.
-support: https://github.com/<user>/<repo>/discussions
-
-# The gallery is an array of filenames (Official App Store) or URLs (Community App Stores) to images that will be shown in the App Store.
-# Ideally the size of the images should be 2280x1800 (1.6:1) pixels.
+support: https://support.teamspeak.com
 gallery:
-  - 1.jpg
-  - 2.jpg
-
-# The release notes of the app. This should be a string that describes the changes in the new version. (optional)
-# Note: To separate paragraphs, use two empty lines instead of only one.
-#releaseNotes: >-
-#  This is a new version of the app.
-#  
-#  
-#  It has some new features and some bug fixes.
-
-# The dependencies of the app. This should be an array of IDs of apps that this app depends on. (optional)
-# This gives Umbrel a list of app IDs that must be already installed in order for the user to install this app and also function.
-#dependencies: []
-
-# The permissions of the app. This should be an array of permissions that the app requires. (optional)
-# Available permissions are: 
-# - STORAGE_DOWNLOADS: Allows the app to download files to the storage.
-#permissions: []
-
-# If the app is only accessible via a subpath, you can specify it here. (optional)
-#path: /web
-
-# If the user needs to know about a default username and password, you can specify it here. (optional)
-#defaultUsername: admin
-#defaultPassword: admin
-
-# If true, Umbrel will generate a deterministic password for the app. (optional)
-# It will be shown to the user in the Umbrel UI and can be used inside the docker-compose.yml as the $APP_PASSWORD variable.
-# This will also override the defaultPassword if set.
-#deterministicPassword: false
-
-# If the app is optimized for the Umbrel Home (https://umbrel.com/umbrel-home), you can specify it here. (optional)
-#optimizedForUmbrelHome: false
-
-# If true, the app is only accessible via Tor. (optional)
-# Users will need to access their Umbrel in a Tor browser on their remote access URL (Settings > Remote Tor access) to open the app.
-#torOnly: false
-
-# If the size of the app is known, you can specify it here. (optional)
-# It will be shown on the "Install" button in the App Store.
-# IMPORTANT: The size needs to be in bytes.
-#installSize: 10000
-
-# Widgets are small UI elements that can be shown on the Umbrel home screen. (optional)
-# You can specify an array of widgets.
-# Examples:
-# The ID should be unique within the app and contain only alphabets (a-z) and dashes (-)
-#- id: "disk-usage"
-#  # The type of the widget. Available widgets are: "text-with-buttons", "text-with-progress",
-#  # "two-stats-with-guage", "three-stats", "four-stats", "list-emoji" and "list".
-#  # To see how they look, visit http://umbrel.local/stories/widgets.
-#  type: "text-with-progress"
-#  # How often the widget should update. See all available options here: https://github.com/vercel/ms/blob/main/readme.md
-#  refresh: "1m"
-#  # The endpoint to fetch the data from.
-#  # The hostname is the service from the docker-compose.yml.
-#  endpoint: "server:80/api/widgets/disk-usage"
-#  # On click of the widget, the app will open. (optional)
-#  # The link (which is actually a path) will be appended to the app's URL.
-#  # When the link is an empty string, the app will open as if the icon was clicked.
-#  link: "/disk-usage"
-#  # An example of the widget to show off the widget in the widget picker.
-#  example:
-#    type: "text-with-progress"
-#    link: ""
-#    title: "Time Machine Usage"
-#    text: "420 GB"
-#    progressLabel: "580 GB left"
-#    progress: 0.42
-#widgets: []
-
-# If you are opening the terminal of an app (Settings > Advanced settings > Terminal), you can specify the default docker compose service name here. (optional)
-# This is useful, if you have multiple services in your docker-compose.yml and want to open the terminal of a specific service.
-#defaultShell: app
+  - 1.png
+  - 2.png
+  - 3.png
+  - 4.png
+  - 5.png
+releaseNotes: ""
+dependencies: []
+path: ""
+defaultUsername: serveradmin
+deterministicPassword: true
+defaultShell: server
