--- a/teamspeak/docker-compose.yml
+++ b/teamspeak/docker-compose.yml
@@ -1,77 +1,30 @@
-# The docker compose file is used to start and stop your app's Docker containers.
 version: "3.7"
 
 services:
-  # The app proxy is always needed and tells Umbrel how to route traffic to your app.
   app_proxy:
     environment:
-      # For apps in the official app store:
-      # <app-id>_<web-container-name>_1
-      # e.g. 'btc-rpc-explorer_web_1'
-      # For apps in the community app store:
-      # <app-store-id>-<app-id>_<web-container-name>_1
-      # e.g. 'sparkles-btc-rpc-explorer_web_1'
-      # Note that the '_1' at the end is needed
-      APP_HOST: _web_1
-      # The port your app's web server is listening on
-      # Note: This does not need to be the same port as in the umbrel-app.yml
-      # This port is only accessible from within the Docker network
-      APP_PORT: <web-container-port-number>
-      # If you want to disable the app proxy, you can set this to 'false'
-      # Disabling the app proxy will make your app accessible without the Umbrel authentication
-      #PROXY_AUTH_ADD: "true"
-      # If you only want to allow public access to some parts of the app, you can use white/blacklists Here
-      #PROXY_AUTH_WHITELIST: "*"
-      #PROXY_AUTH_BLACKLIST: "/admin/*"
+      APP_HOST: teamspeak_ui_1
+      APP_PORT: 8080
   
-  web:
-    # Note: always use the image digest to ensure reproducability across installations
-    image: <docker-image>:<tag>@sha256:<digest>
-    # Reducing the ownership/permissions to the umbrel user would be ideal from an app sandbox point of view.
-    # But it might not be possible for all apps to run as a non-root user!
-    #user: "1000:1000"
+  ui:
+    image: "joni1802/ts3-manager:v2.2.1@sha256:d69890c323e8715cef0f625036c7c51ec7e7da321438897633fff5df83da1e39"
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
-    # ports:
-      # You do not need to expose the port that your app's web server is listening on if you're using the app_proxy service.
-      # This is handled by the APP_HOST and APP_PORT environment variables in the service above.
-      #
-      # If you need to expose additional ports, you can do so like this, replacing <port> with the port number:
-      #- <port>:<port>
-    # volumes:
-      # Uncomment to mount your data directories inside
-      # the Docker container for storing persistent data
-      # - ${APP_DATA_DIR}/app/foo:/foo
-      # - ${APP_DATA_DIR}/app/bar:/bar
-      #
-      # Uncomment to mount LND's data directory as read-only
-      # inside the Docker container at path /lnd
-      # - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
-      #
-      # Uncomment to mount Bitcoin Core's data directory as
-      # read-only inside the Docker container at path /bitcoin
-      # - ${APP_BITCOIN_DATA_DIR}:/bitcoin:ro
-    # environment:
-      # Pass any environment variables to your app for configuration in the form:
-      # VARIABLE_NAME: value
-      #
-      # Here are all the Umbrel provided variables that you can pass through to
-      # your app
-      # System level environment variables
-      # $DEVICE_HOSTNAME - Umbrel server device hostname (e.g. "umbrel")
-      # $DEVICE_DOMAIN_NAME - A .local domain name for the Umbrel server (e.g. "umbrel.local")
-      #
-      # Tor proxy environment variables
-      # $TOR_PROXY_IP - Local IP of Tor proxy
-      # $TOR_PROXY_PORT - Port of Tor proxy
-      #
-      # App specific environment variables
-      # $APP_HIDDEN_SERVICE - The address of the Tor hidden service your app will be exposed at
-      # $APP_PASSWORD - Unique plain text password that can be used for authentication in your app, shown to the user in the Umbrel UI
-      # $APP_SEED - Unique 256 bit long hex string (128 bits of entropy) deterministically derived from user's Umbrel seed and your app's ID
-      
-  # If your app has more services, like a database container, you can define those
-  # services below:
-  # db:
-  #   image: <docker-image>:<tag>@sha256:<digest>
-  #   ...
+    environment:
+      JWT_SECRET: $APP_SEED
+
+  server:
+    image: docker.io/library/teamspeak:3.13.7@sha256:sha256:b5bdec55bc87b992c5658e739f3ce465644efa6d997633110b12be3dc3a10796
+    user: "1000:1000"
+    restart: on-failure
+    stop_grace_period: 1m
+    ports:
+      - 9987:9987/udp
+      - 10011:10011
+      - 30033:30033
+    volumes:
+      - ${APP_DATA_DIR}/data:/var/ts3server
+    environment:
+      TS3SERVER_LICENSE: accept
+      TS3SERVER_SERVERADMIN_PASSWORD: $APP_PASSWORD
