added PR number

--- a/teamspeak/umbrel-app.yml
+++ b/teamspeak/umbrel-app.yml
@@ -13,7 +13,7 @@ description: >-
   ⚠️ Note
 
   You need the TeamSpeak client to connect to the server. You can download it here: https://www.teamspeak.com/downloads
-  
+
   To log in to the app, use the following login details:
 
 
@@ -68,7 +68,7 @@ description: >-
 developer: TeamSpeak Systems, Inc.
 website: https://www.teamspeak.com
 submitter: Sharknoon
-submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
+submission: https://github.com/getumbrel/umbrel-apps/pull/1112
 support: https://support.teamspeak.com
 gallery:
   - 1.png
