Commit data bind mounts

--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: docker.io/library/postgres:16
     restart: unless-stopped
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ${APP_DATA_DIR}/data/pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: paperless
       POSTGRES_USER: paperless
