Add superuser to allow sign in after install

--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       PAPERLESS_TIKA_ENABLED: 1
       PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://paperless_gotenberg_1:3000
       PAPERLESS_TIKA_ENDPOINT: http://paperless_tika_1:9998
+      PAPERLESS_ADMIN_USER: admin
+      PAPERLESS_ADMIN_PASSWORD: $APP_PASSWORD
 
   gotenberg:
     image: docker.io/gotenberg/gotenberg:7.10@sha256:d03b8a04c6e6c5e568b38f57352266dee4674849b71818774025f8f48d869a9a
