--- a/paperless/umbrel-app.yml
+++ b/paperless/umbrel-app.yml
@@ -18,7 +18,7 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: "paperless"
-defaultPassword: "paperless"
+defaultUsername: "admin"
+deterministicPassword: true
 submitter: highghlow
 submission: https://github.com/getumbrel/umbrel-apps/pull/TODO
