--- a/paperless/umbrel-app.yml
+++ b/paperless/umbrel-app.yml
@@ -6,7 +6,7 @@ version: "2.7.2"
 tagline: Organize and index your scanned documents with tags, correspondents, types, and more
 description: >-
   Paperless-ngx is a community-supported open-source document management system that transforms your physical documents into a searchable online archive so you can keep, well, less paper.
-
+releaseNotes: ""
 developer: Paperless-ngx Community
 website: https://docs.paperless-ngx.com/
 dependencies: []
