updated to databag version supporting MFA

--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: databag
 category: social
 name: Databag
-version: "0.1.12"
+version: "0.1.14"
 tagline: A tiny self-hosted federated messenger for the decentralized web
 description: >-
   Databag is a self-hosted messaging service. Notable features include:
@@ -46,10 +46,7 @@ description: >-
 releaseNotes: >-
   This update of Databag brings the following changes:
 
-
-  - Updated internal version of Go
-
-  - Fix for storage setting in admin dashboard
+  - Adding support for multi-factor authentication via TOTP
 
 dependencies: []
 developer: Pierre Balzack
