--- a/ntfy/docker-compose.yml
+++ b/ntfy/docker-compose.yml
@@ -6,22 +6,15 @@ services:
       APP_HOST: ntfy_app_1
       APP_PORT: 80
       PROXY_AUTH_ADD: false
-      
-  init:
-    image: binwiederhier/ntfy:v2.11.0@sha256:4a7d0f0adc6d5d9fc36e64ab55ef676e76e124a2bdd50ce115b6d9c1c7430294
-    restart: 'no'
-    command: >
-      NTFY_PASSWORD=${APP_PASSWORD} ntfy user add --role=admin umbrel
 
   app:
     image: binwiederhier/ntfy:v2.11.0@sha256:4a7d0f0adc6d5d9fc36e64ab55ef676e76e124a2bdd50ce115b6d9c1c7430294
-    depends_on:
-      - init
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
-    command: serve
+    entrypoint: [ "/bin/sh", "/entrypoint.sh" ]
     volumes:
+      - ${APP_DATA_DIR}/entrypoint.sh:/entrypoint.sh
       - ${APP_DATA_DIR}/data/cache:/var/cache/ntfy
       - ${APP_DATA_DIR}/data/data:/etc/ntfy
       - ${APP_DATA_DIR}/data/lib:/var/lib/ntfy
@@ -31,3 +24,4 @@ services:
       NTFY_ENABLE_LOGIN: true
       NTFY_AUTH_FILE: /var/lib/ntfy/user.db
       NTFY_AUTH_DEFAULT_ACCESS: deny-all
+      NTFY_PASSWORD: ${APP_PASSWORD}
