--- a/ghostfolio/docker-compose.yml
+++ b/ghostfolio/docker-compose.yml
@@ -8,6 +8,7 @@ services:
 
   server:
     image: ghostfolio/ghostfolio:2.83.0@sha256:e25d644dbc4189822d54f3559b6a02826a4b4612b612c63dfa6af0ece528d269
+    init: true
     restart: on-failure
     environment:
       NODE_ENV: production
