tweak release notes

--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -44,10 +44,7 @@ description: >-
   🌐 HTTPS Configuration: The browser version of the app can operate over http, but the mobile app requires https. You can set up https using the Cloudflare Tunnel app available in the app store.
   Detailed instructions for configuring the tunnel can be found here: https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
 releaseNotes: >-
-  This update of Databag brings the following changes:
-
-  - Adding support for multi-factor authentication via TOTP
-
+  This update adds support for multi-factor authentication via TOTP.
 dependencies: []
 developer: Pierre Balzack
 website: https://github.com/balzack/databag
