Updated Databag to v0.1.14 (#1116)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/databag/umbrel-app.yml
+++ b/databag/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: databag
 category: social
 name: Databag
-version: "0.1.12"
+version: "0.1.14"
 tagline: A tiny self-hosted federated messenger for the decentralized web
 description: >-
   Databag is a self-hosted messaging service. Notable features include:
@@ -44,13 +44,7 @@ description: >-
   🌐 HTTPS Configuration: The browser version of the app can operate over http, but the mobile app requires https. You can set up https using the Cloudflare Tunnel app available in the app store.
   Detailed instructions for configuring the tunnel can be found here: https://github.com/Radiokot/umbrel-cloudflared/wiki/How-to-set-up-Cloudflare-Tunnel-on-your-Umbrel
 releaseNotes: >-
-  This update of Databag brings the following changes:
-
-
-  - Updated internal version of Go
-
-  - Fix for storage setting in admin dashboard
-
+  This update adds support for multi-factor authentication via TOTP.
 dependencies: []
 developer: Pierre Balzack
 website: https://github.com/balzack/databag
