--- a/scanservjs/docker-compose.yml
+++ b/scanservjs/docker-compose.yml
@@ -14,4 +14,4 @@ services:
       - /var/run/dbus:/var/run/dbus
       - ${APP_DATA_DIR}/data/scans:/var/lib/scanservjs/output
       - ${APP_DATA_DIR}/data/cfg:/etc/scanservjs
-    priveleged: true # It's for accessing usb-connected scanners
+    privileged: true # It's for accessing usb-connected scanners
