--- a/scanservjs/docker-compose.yml
+++ b/scanservjs/docker-compose.yml
@@ -14,4 +14,6 @@ services:
       - /var/run/dbus:/var/run/dbus
       - ${APP_DATA_DIR}/data/scans:/var/lib/scanservjs/output
       - ${APP_DATA_DIR}/data/cfg:/etc/scanservjs
+      # map the host's /dev to allow discovery of usb devices without needing to know apriori which devices are connected
+      - /dev:/dev 
     privileged: true
