--- a/myspeed/docker-compose.yml
+++ b/myspeed/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-     - ${APP_DATA_DIR}/data:/myspeed/data
+     - ${APP_DATA_DIR}/data/myspeed:/myspeed/data
