--- a/myspeed/umbrel-app.yml
+++ b/myspeed/umbrel-app.yml
@@ -9,22 +9,10 @@ description: >-
   This can also be useful if you want to know when your network might have drops or if you want to check if your internet 
   matches the booked values from your contract.
   
-  
+
   MySpeed automatically creates tests every hour, which you can view in a dashboard. 
   If a test is older than 30 days, it will be deleted to keep the dashboard clearer.
-releaseNotes: >-
-  - Prometheus metrics are now available! You can now monitor your internet speed with Prometheus and Grafana.
-  
-  - Better storage management has been added. You can now import, export, and delete your data.
-  
-  - Support for Cloudflare Speed & LibreSpeed has been added.
-  
-  - MySQL-support has been added.
-  
-  - A welcome dialog has been added.
-  
-  - Custom interface support has been added.
-
+releaseNotes: ""
 developer: Mathias Wagner
 website: https://myspeed.dev
 repo: https://github.com/gnmyt/myspeed
