--- a/myspeed/umbrel-app.yml
+++ b/myspeed/umbrel-app.yml
@@ -19,6 +19,7 @@ repo: https://github.com/gnmyt/myspeed
 support: https://github.com/gnmyt/myspeed/issues/new/choose
 dependencies: []
 port: 5216
+path: ""
 gallery:
   - 1.jpg
   - 2.jpg
