App name change from Sirling to Stirling

--- a/stirling-pdf/umbrel-app.yml
+++ b/stirling-pdf/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: stirling-pdf
-name: Sirling PDF
+name: Stirling PDF
 tagline: Merge, split, rotate, and convert PDFs with ease.
 category: files
 version: "0.25.0"
