remove . from tagline for consistency with other apps

--- a/stirling-pdf/umbrel-app.yml
+++ b/stirling-pdf/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: stirling-pdf
 name: Stirling PDF
-tagline: Merge, split, rotate, and convert PDFs with ease.
+tagline: Merge, split, rotate, and convert PDFs with ease
 category: files
 version: "0.25.0"
 port: 27829
