--- a/just-download/docker-compose.yml
+++ b/just-download/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       APP_PORT: 5000
   
   web:
-    image: ghcr.io/highghlow/just-download:v1.0.5@sha256:c5df30c93ea9e38d3680b8b5f3fd84ef748c8ddc7bdd5b1c5362dac5c743d47c
+    image: ghcr.io/highghlow/just-download:v1.0.6@sha256:9f7dadd49339acc09b84b70d67701ea77f6f3f32521ae69cc0f6845da9c9f07a
     restart: on-failure
     stop_grace_period: 1m
+    environment:
+      - LOCK_TRANSMISSION_CONFIG=1
     volumes:
       - ${APP_DATA_DIR}:/config
     environment:
