remove . from tagline for app store consistency

--- a/teamspeak/umbrel-app.yml
+++ b/teamspeak/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: teamspeak
 name: TeamSpeak
-tagline: Easy, Secure, and High-Quality Communication for Gaming, Learning, Business, and more.
+tagline: Easy, Secure, and High-Quality Communication for Gaming, Learning, Business, and more
 category: social
 version: "3.13.7"
 port: 50371
