Fix spelling mistake

--- a/ntfy/umbrel-app.yml
+++ b/ntfy/umbrel-app.yml
@@ -31,7 +31,7 @@ description: >-
 
   ⚙️ Integrate with your favorite tools
 
-  Publishing messages is just a HTTP request, so pretty much everything under the sun can integrate with ntfy. Hundrets
+  Publishing messages is just a HTTP request, so pretty much everything under the sun can integrate with ntfy. Hundreds
   of integrations, projects or scripts already support ntfy.
 
 developer: ntfy LLC
