Fixed /config mount

--- a/just-download/docker-compose.yml
+++ b/just-download/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}:/config
+      - ${APP_DATA_DIR}/data/config:/config
     environment:
       LOCK_TRANSMISSION_CONFIG: 1
       CONFIG_LOCATION: /config/config.json
