--- a/just-download/umbrel-app.yml
+++ b/just-download/umbrel-app.yml
@@ -8,6 +8,7 @@ description: >-
   Just Download allows you to easily download movies, books, games, etc. from your favourite indexers. It acts as a bridge between a Torznab feed (Jackett is recommended for making these) and transmission.
 
   You just search, press download and you're done!
+releaseNotes: ""
 developer: highghlow
 website: https://github.com/highghlow/just-download
 dependencies:
