Update version and release notes in umbrel-app

--- a/penpot/umbrel-app.yml
+++ b/penpot/umbrel-app.yml
@@ -2,14 +2,26 @@ manifestVersion: 1
 id: penpot
 category: developer
 name: Penpot
-version: "1.18.3"
+version: "2.0.1"
 tagline: Design and prototyping platform
 description: >-
   Penpot is a pioneering open-source platform for design and prototyping, tailored specifically for product teams.
   Unconstrained by operating systems, Penpot utilizes the flexibility of web-based platforms and the interoperability
   of open standards, specifically SVG. Penpot invites designers all over the world to fall in love with open source
   while getting developers excited about the design process in return.
-releaseNotes: ""
+releaseNotes: >-
+  🚀 Epics and highlights
+  - Grid CSS layout Taiga #4915
+  - UI redesign Taiga #4958
+  - New components System Taiga #2662
+  - Swap components Taiga #1331
+  - Images as fill Taiga #2983
+  - HTML code generation Taiga #5277
+  - Light and dark themes Taiga #2287
+  💥 Breaking changes & Deprecations
+  - New strokes default to inside border Taiga
+
+  Read the full release notes for additional information and detailed changes at https://github.com/penpot/penpot/releases/tag/2.0.0
 developer: Penpot
 website: https://penpot.app/
 dependencies: []
