--- a/penpot/umbrel-app.yml
+++ b/penpot/umbrel-app.yml
@@ -10,16 +10,17 @@ description: >-
   of open standards, specifically SVG. Penpot invites designers all over the world to fall in love with open source
   while getting developers excited about the design process in return.
 releaseNotes: >-
-  🚀 Epics and highlights
-  - Grid CSS layout Taiga #4915
-  - UI redesign Taiga #4958
-  - New components System Taiga #2662
-  - Swap components Taiga #1331
-  - Images as fill Taiga #2983
-  - HTML code generation Taiga #5277
-  - Light and dark themes Taiga #2287
-  💥 Breaking changes & Deprecations
-  - New strokes default to inside border Taiga
+  🚀 Epics and highlights  
+    - Grid CSS layout  
+    - UI redesign  
+    - New components System  
+    - Swap components  
+    - Images as fill  
+    - HTML code generation  
+    - Light and dark themes
+  
+  💥 Breaking changes & Deprecations  
+    - New strokes default to inside border  
 
   Read the full release notes for additional information and detailed changes at https://github.com/penpot/penpot/releases/tag/2.0.0
 developer: Penpot
