Added ntfy upstream base url

--- a/ntfy/docker-compose.yml
+++ b/ntfy/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ${APP_DATA_DIR}/data/lib:/var/lib/ntfy
     environment:
       NTFY_BASE_URL: http://${DEVICE_DOMAIN_NAME}:${APP_PROXY_PORT}
+      NTFY_UPSTREAM_BASE_URL: https://ntfy.sh
       NTFY_CACHE_FILE: /var/cache/ntfy/cache.db
       NTFY_ENABLE_LOGIN: true
       NTFY_AUTH_FILE: /var/lib/ntfy/user.db
