change downloads bind mount to default qBittorrent dir

--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -15,5 +15,6 @@ services:
       # - UMASK=002
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-      - ${UMBREL_ROOT}/data/storage/downloads:/downloads
+      # /app/qBittorrent/downloads is the default path set in qBittorrent
+      - ${UMBREL_ROOT}/data/storage/downloads:/app/qBittorrent/downloads
     restart: on-failure
