--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -8,8 +8,14 @@ description: >-
   qBittorrent is an open-source software alternative to µTorrent. It's designed to meet the needs of most users while using as little CPU and memory as possible.
 
   
-  This app comes bundled with VueTorrent, a sleek user interface that provides an alternative to qBittorrent's default interface.
+  🛠️ SET-UP INSTRUCTIONS
+
+  - qBittorrent on umbrelOS is configured to work without any additional configuration. Please make sure that you do not change the default download path in the app settings. It should remain set to "/app/qBittorrent/downloads" to ensure that your downloads show up in your main Umbrel downloads folder.
+
+  - This app comes bundled with VueTorrent, a sleek user interface that provides an alternative to qBittorrent's default interface.
   To enable VueTorrent, simply navigate to tools --> options --> Web UI and select "Use alternative Web UI".
+
+  - It is recommended to change the default password for the app after installation.
   
 
   ⚠️ qBittorrent downloads torrents over the Clearnet, not Tor.
@@ -17,7 +23,7 @@ releaseNotes: >-
   This release updates qBittorrent from version 4.6.0 to 4.6.5. 
 
 
-  TODO: add note about default password.
+  ⚠️ After updating, please ensure that your downloads path in the app is set to the default "/app/qBittorrent/downloads" path. This will make it so that your downloads show up in your main Umbrel downloads folder.
   
   
   Read the full release notes at https://www.qbittorrent.org/news#sun-may-26th-2024---qbittorrent-v4.6.5-release
