--- a/penpot/docker-compose.yml
+++ b/penpot/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       - PENPOT_ASSETS_STORAGE_BACKEND=assets-fs
       - PENPOT_STORAGE_ASSETS_FS_DIRECTORY=/opt/data/assets
       - PENPOT_TELEMETRY_ENABLED=false
+      # PENPOT_PUBLIC_URI needs to be set to in order to render thumbnails in the frontend
+      - PENPOT_PUBLIC_URI=http://${DEVICE_DOMAIN_NAME}:${APP_PENPOT_UI_PORT}
     depends_on:
       - penpot-postgres
       - penpot-redis
