tweak release notes

--- a/penpot/umbrel-app.yml
+++ b/penpot/umbrel-app.yml
@@ -10,6 +10,9 @@ description: >-
   of open standards, specifically SVG. Penpot invites designers all over the world to fall in love with open source
   while getting developers excited about the design process in return.
 releaseNotes: >-
+  ⚠️ This is a major update of Penpot. The app may take a few minutes to start after updating. Please be patient.
+
+
   🚀 Epics and highlights  
     - Grid CSS layout  
     - UI redesign  
