--- a/mealie/umbrel-app.yml
+++ b/mealie/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: mealie
 category: files
 name: Mealie
-version: "1.0.0beta-5"
+version: "1.8.0"
 tagline: A Place for All Your Recipes
 description: >-
   Mealie is a self hosted recipe manager and meal planner. Easily add recipes by providing
