add release notes

--- a/mealie/umbrel-app.yml
+++ b/mealie/umbrel-app.yml
@@ -24,4 +24,8 @@ defaultPassword: ""
 torOnly: false
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/608
-releaseNotes: ""
+releaseNotes: >-
+  This release upgrades Mealie from version 1.0.0beta-5 to 1.8.0.
+
+
+  Full release notes can be found at https://github.com/mealie-recipes/mealie/releases.
