Add comment to change consume and export bind mounts in the future

--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/data:/usr/src/paperless/data
       - ${APP_DATA_DIR}/data/media:/usr/src/paperless/media
+      # TODO: move these inside the paperless app data dir once umbrelOS supports navigating to it via the UI
       - ${UMBREL_ROOT}/data/storage/paperless/export:/usr/src/paperless/export
       - ${UMBREL_ROOT}/data/storage/paperless/consume:/usr/src/paperless/consume
     environment:
