--- a/myspeed/docker-compose.yml
+++ b/myspeed/docker-compose.yml
@@ -8,6 +8,7 @@ services:
 
   web:
     image: germannewsmaker/myspeed:1.0.9@sha256:3a3e774b3f78d930a5a962d625b99bcb3d71730bfeb4a6b93e04fd38cfe7d9a9
+    # myspeed must be run as root
     restart: on-failure
     stop_grace_period: 1m
     volumes:
