--- a/myspeed/umbrel-app.yml
+++ b/myspeed/umbrel-app.yml
@@ -6,12 +6,12 @@ version: 1.0.9
 tagline: Speed test analysis software that shows your internet speed for up to 30 days
 description: >-
   MySpeed is a speed test analysis software that stores the speed of your internet for up to 30 days. 
-  This can also be useful if you want to know when your network might have drops or if you want to check if your internet 
+  This can be useful if you want to know when your network might have drops or if you want to check if your internet 
   matches the booked values from your contract.
   
 
-  MySpeed automatically creates tests every hour, which you can view in a dashboard. 
-  If a test is older than 30 days, it will be deleted to keep the dashboard clearer.
+  MySpeed automatically creates tests every hour, which you can view in the dashboard. 
+  Tests older than 30 days are automatically deleted to keep the dashboard clean.
 releaseNotes: ""
 developer: Mathias Wagner
 website: https://myspeed.dev
