Modify Stirling PDF gallery

--- a/stirling-pdf/umbrel-app.yml
+++ b/stirling-pdf/umbrel-app.yml
@@ -50,11 +50,9 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/1111
 repo: https://github.com/Stirling-Tools/Stirling-PDF
 support: https://github.com/Stirling-Tools/Stirling-PDF/discussions
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
-  - 4.png
-  - 5.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 path: ""
