--- a/teamspeak/umbrel-app.yml
+++ b/teamspeak/umbrel-app.yml
@@ -71,11 +71,9 @@ submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/1112
 support: https://support.teamspeak.com
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
-  - 4.png
-  - 5.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 path: ""
