--- a/autobrr/umbrel-app.yml
+++ b/autobrr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: autobrr
 category: media
 name: autobrr
-version: "1.39.1"
+version: "1.42.0"
 tagline: Modern, easy to use download automation for torrents and usenet
 description: >-
   autobrr is the modern download automation tool for torrents and usenet.
@@ -17,7 +17,9 @@ description: >-
 
   It then sends that torrent file to a download client of your choice. A download client can be anything from qBittorrent, Deluge, Radarr, Sonarr, watch folder, and more.
 releaseNotes: >-
-  This update takes autobrr from version 1.36.0 to 1.39.1. Full release notes are available at https://github.com/autobrr/autobrr/releases.
+  This update takes autobrr from version 1.39.1 to 1.42.0.
+
+  Full release notes are available at https://autobrr.com/release-notes
 developer: autobrr
 website: https://autobrr.com/
 dependencies: []
