Update Teamspeak app manifest

--- a/teamspeak/umbrel-app.yml
+++ b/teamspeak/umbrel-app.yml
@@ -67,6 +67,7 @@ description: >-
 
 developer: TeamSpeak Systems, Inc.
 website: https://www.teamspeak.com
+repo: ""
 submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/1112
 support: https://support.teamspeak.com
