Finalize gallery images

--- a/ntfy/umbrel-app.yml
+++ b/ntfy/umbrel-app.yml
@@ -47,11 +47,9 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
 repo: https://github.com/binwiederhier/ntfy
 support: https://github.com/binwiederhier/ntfy/issues
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
-  - 4.png
-  - 5.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 path: ""
