Add whitespace to description and tweak iOS note

--- a/ntfy/umbrel-app.yml
+++ b/ntfy/umbrel-app.yml
@@ -9,11 +9,12 @@ description: >-
   ntfy (pronounced notify) is a simple HTTP-based pub-sub notification service. It allows you to send notifications to
   your phone or desktop via scripts from any computer, and/or using a REST API.
 
+
   ℹ️ iOS Notifications
 
   Apple's restrictions require a publicly reachable server for instant notifications on iOS. We use https://ntfy.sh for poll
-  requests by default. This doesn't send your notifications through this service, but prompts your iOS device to
-  download the notification from your ntfy instance. You can change NTFY_UPSTREAM_BASE_URL in the compose file if needed.
+  requests by default. This doesn't send your notifications through this service, but instead only prompts your iOS device to
+  download the notification from your local ntfy instance. Advanced users can remove the "NTFY_UPSTREAM_BASE_URL" environment variable from the Docker compose file if desired; however, this will disable instant notifications on iOS devices.
 
 
   🔔 Send push notifications from your app or script
