Change category to media so that just download shows up with the other download/indexer clients

--- a/just-download/umbrel-app.yml
+++ b/just-download/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: just-download
-category: files
+category: media
 name: Just. Download.
 version: "1.0.8"
 tagline: Download torrents. Just. Download.
