--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   app_proxy:
@@ -8,15 +8,11 @@ services:
       PROXY_AUTH_WHITELIST: "/api*"
 
   web:
-    image: lscr.io/linuxserver/sabnzbd:4.1.0@sha256:84a54b2bd29198bc76e253c8592ac72996737d79f845c1db56ab053739cb61bc
+    image: linuxserver/sabnzbd:4.3.2@sha256:6c25ce4614035d6e25736a2fc30a7087b95f4dbae64933eb113a8e2f081bea4a
     restart: unless-stopped
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-      # sabnzdb offers no way to change the default download directory via environment variables
-      # and the sabnzbd.ini is not generated until after going through the setup wizard, which automatically sets the download directory to /config/Downloads
-      # users then need to manually change the download directory to /downloads in Settings > Folders
-      # This must be done in order to integrate easily properly with other apps like Sonarr and Radarr
       - ${UMBREL_ROOT}/data/storage/downloads:/downloads
     environment:
       - PUID=1000
