--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: core-lightning-rtl
 category: bitcoin
 name: Ride The Lightning (Core Lightning)
-version: "0.14.1-beta"
+version: "0.15.2-beta"
 tagline: Manage your Core Lightning node with RTL
 description: >-
   This version of RTL is specifically configured to use your Core Lightning node.
@@ -44,11 +44,11 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Bug fix to support forked core lightning versions on BTCPayserver
-  
-  - Default onchain address type is now P2TR (dependent on c-lightning-rest v0.10.7)
+  - Integration with mempool.space api to display prevailing fee rates on various channel open/close modals
 
-  - and more!
+  - Links enabled for viewing transactions on mempool.space from modals of on-chain transactions and channel info
+
+  - Added a new config param blockExplorerUrl (-e BLOCK_EXPLORER_URL) to customize for a local/testnet instances of mempool.space
 
 
   Full release notes can be found here: https://github.com/Ride-The-Lightning/RTL/releases
