--- a/ride-the-lightning/docker-compose.yml
+++ b/ride-the-lightning/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3001
   
   web:
-    image: shahanafarooqui/rtl:0.14.1@sha256:88bbf2dac4a5eedd0b692e97bc6c50a5266f44aff8215770ea2fc4eb7495e41e
+    image: shahanafarooqui/rtl:v0.15.2@sha256:5473e45c18e86c479ac8e7485f06e7c31948d5dc0726306f3850cf8ee635cbcd
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -24,6 +24,7 @@ services:
         RTL_CONFIG_PATH: "/data"
         CHANNEL_BACKUP_PATH: "/data/backup"
         LN_IMPLEMENTATION: "LND"
+        BLOCK_EXPLORER_URL: 'https://mempool.space'
 
         # LND connection details
         LN_SERVER_URL: "https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT"
