Tweak release notes

--- a/sonarr/umbrel-app.yml
+++ b/sonarr/umbrel-app.yml
@@ -19,14 +19,13 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Sonarr from 3.0.10 to 4.0.5.
+  This release updates Sonarr from 3.0.10 to 4.0.5. The official Sonarr v4 announcement can be found at https://forums.sonarr.tv/t/sonarr-v4-released/33089.
 
 
   🚨 You will be required to set-up a login for Sonarr with this update.
 
 
-  To read the full Sonarr v4 announce https://forums.sonarr.tv/t/sonarr-v4-released/33089
-  Full release notes here: https://github.com/Sonarr/Sonarr/releases
+  Full release notes can be found at https://github.com/Sonarr/Sonarr/releases
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
