--- a/sonarr/umbrel-app.yml
+++ b/sonarr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: sonarr
 category: media
 name: Sonarr
-version: "3.0.10"
+version: "4.0.5"
 tagline: Smart PVR for newsgroup and bittorrent users
 description: >-
   Sonarr is a PVR for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new episodes of your favorite shows and will grab, sort and rename them. It can also be configured to automatically upgrade the quality of files already downloaded when a better quality format becomes available.
@@ -19,10 +19,13 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Sonarr from 3.0.9 to 3.0.10
+  This release updates Sonarr from 3.0.10 to 4.0.5. The official Sonarr v4 announcement can be found at https://forums.sonarr.tv/t/sonarr-v4-released/33089.
 
 
-  Full tags list here: https://github.com/Sonarr/Sonarr/tags
+  🚨 You will be required to set-up a login for Sonarr with this update.
+
+
+  Full release notes can be found at https://github.com/Sonarr/Sonarr/releases
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
