--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,10 +22,13 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND to v0.17.5-beta. This is a minor hot fix release that bumps a dependency to ensure that LND is compatible with Bitcoin Core 27.0.
+  ⚠️ Please allow a few minutes for your Lightning Node to come online after updating to this version. Nodes running with Watchtower Client enabled (wtclient.active=true) will not be able to downgrade to a previous version of lnd after updating to this version.
 
 
-  Full LND v0.17.5-beta can be found at https://github.com/lightningnetwork/lnd/releases
+  This release updates LND to v0.18.0-beta. This is a major release that includes support for blinded paths (forwarding), a new native SQL invoice database, deadline aware HTLC/commitment transaction RBF/CPFP fee bumping, experimental support for inbound channel fees (discount only), first class probing for payment fee estimation, testmempoolaccept awareness for all transaction publishing, and much more!
+
+
+  Full LND v0.18.0-beta release notes can be found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.18.0.md
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
