tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -48,7 +48,7 @@ releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. 
 
 
-  Welcome to release v1.106.0 of Immich. Woooh, this release is packed with many new features, improvements, and bug fixes. Let's go over some of the highlights of the release below:
+  This release is packed with many new features, improvements, and bug fixes. Highlights include:
 
   - Removal of the immich-microservices container
 
@@ -67,8 +67,7 @@ releaseNotes: >-
   - Public roadmap: https://immich.app/roadmap/
 
   - Translation on the web
-Notable fix: Fixed an edge case bug on mobile synchronization when there is a bad file with date time information.
-  
+
 
   Full release notes are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
