Update Immich to v1.106.4 (#1160)

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.105.1"
+version: "v1.106.4"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -46,7 +46,28 @@ description: >-
   - User-defined storage structure
 releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. 
-  
+
+
+  This release is packed with many new features, improvements, and bug fixes. Highlights include:
+
+  - Removal of the immich-microservices container
+
+  - Similar image detection and management
+
+  - End-to-end acceleration for NVENC and QSV transcoding
+
+  - Better video thumbnails
+
+  - Email notifications for album events
+
+  - Per user email notifications settings
+
+  - Send a test email when configuring the SMTP email server
+
+  - Public roadmap: https://immich.app/roadmap/
+
+  - Translation on the web
+
 
   Full release notes are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
