Add recovery phrase warning to release notes

--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -17,6 +17,10 @@ description: >-
   constant product market-making. In short, this model generates a full order-book based on an initial price for the market.
   Every transaction that occurs on this market will adjust the prices of the market accordingly.
 releaseNotes: >-
+  🚨 IMPORTANT: Please ensure you have your 24-word recovery phrase written down BEFORE updating.
+  This update will require you to restore your wallet from the 24-word recovery phrase after the update.
+
+
   This is a major update of the TDEX daemon that contains several changes, including:
 
   - Update to TDEXv2: the daemon's Trade interface implements the specs of the new TDEX v2 protocol. With this update the daemon makes
