Change tdexd data bind mount and create it for legacy installs

--- a/tdex/docker-compose.yml
+++ b/tdex/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - oceand
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}/tdex-data:/home/tdex/.tdex-daemon
+      - ${APP_DATA_DIR}/tdexd:/home/tdex/.tdex-daemon
     ports:
      - ${APP_TDEX_PORT}:${APP_TDEX_PORT}
     environment:
