--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -18,7 +18,7 @@ description: >-
   Every transaction that occurs on this market will adjust the prices of the market accordingly.
 releaseNotes: >-
   🚨 IMPORTANT: Please ensure you have your 24-word recovery phrase written down BEFORE updating.
-  This update will require you to restore your wallet from the 24-word recovery phrase after the update.
+  This update will require you to restore your wallet from the 24-word recovery phrase.
 
 
   This is a major update of the TDEX daemon that contains several changes, including:
