--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -2,15 +2,13 @@ manifestVersion: 1
 id: maybe
 category: finance
 name: Maybe
-version: 'v0.1.0-alpha.3'
+version: 'v0.1.0-alpha.6'
 tagline: Open-source OS for your personal finances
 description: >-
   Maybe Maybe is a fully (your finances are secure)
   open-source OS for your personal finances built by
   a small team alongside an incredible community
-releaseNotes: >-
-  Updates to v0.1.0-alpha.3
-  See: https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.3
+releaseNotes: ""
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
