--- a/maybe/docker-compose.yml
+++ b/maybe/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3063
 
   web:
-    image: ghcr.io/maybe-finance/maybe@sha256:f1d1d0d00017e009dd805a184fe5e2aaa663642f6e5bd8c22be5d35daa85c2e6
+    image: ghcr.io/maybe-finance/maybe:0.1.0-alpha.6@sha256:26df3bc827d0ed2990b62cb404be5a934f45e9905a324554a70a97b1975d6d55
     restart: on-failure
     stop_grace_period: 1m
     volumes:
