Add permissions for umbrel storage dir

--- a/home-assistant/umbrel-app.yml
+++ b/home-assistant/umbrel-app.yml
@@ -37,6 +37,8 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
+permissions:
+  - STORAGE_DOWNLOADS
 releaseNotes: >-
   Are you ready for another massive release? This release addresses the most requested feature in Home Assistant history: grouping automations!
 
