Add persistent media storage to Home Assistant (#1067)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -8,4 +8,5 @@ services:
     privileged: true
     volumes:
       - ${APP_DATA_DIR}/data:/config
+      - ${UMBREL_ROOT}/data/storage/downloads:/media
       - /dev:/dev
