--- a/yucca/umbrel-app.yml
+++ b/yucca/umbrel-app.yml
@@ -1,16 +1,13 @@
-manifestVersion: 1.1
+manifestVersion: 1
 id: yucca
 category: automation
 name: Yucca
-version: "0.10.0"
+version: "0.10.1"
 tagline: Simple NVR solution video surveillance
 description: >-
   Simple NVR solution video surveillance for home and business.  
   Perfect for both a solution for safe cities with thousands of cameras and launching a subscriber service, as well as for home use self-hosted.
-
-releaseNotes: >-
-  Init Yucca on Umbrel
-
+releaseNotes: ""
 developer:  Yucca Stream
 website: https://yucca.app/
 repo: ""
@@ -25,5 +22,5 @@ gallery:
 path: ""
 deterministicPassword: false
 dependencies: []
-submitter: jidckii
+submitter: YuccaStream
 submission: https://github.com/getumbrel/umbrel-apps/pull/1071
