--- a/yucca/docker-compose.yml
+++ b/yucca/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 9910
 
   yucca:
-    image: yuccastream/yucca:0.10.0@sha256:9551f42cf20aa1d11bf0df6ba5996cc10f506c8225a60a448876cebefe539eb2
+    image: yuccastream/yucca:0.10.1@sha256:9e3dc1d52a952527000e274e2e22f09b5b6626a630e213997f78e5343aa2eec5
     restart: on-failure
     shm_size: "128mb"
     working_dir: /opt/yucca
@@ -16,6 +16,7 @@ services:
       - "${APP_DATA_DIR}/data/ffmpeg:/opt/yucca/ffmpeg"
     ports:
       - 10925:10925 # SMTP server
+      - 9912:9912 # telemetry (prometheus)
     environment: # Read more about configuration here https://docs.yucca.app/en/configuration/
       YUCCA_SERVER_DATA_DIR: "/opt/yucca/data"
       YUCCA_SMTP_SERVER_LISTEN_ADDRESS: ":10925"
