add PROXY_AUTH_WHITELIST for api

--- a/yucca/docker-compose.yml
+++ b/yucca/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: yucca_yucca_1
       APP_PORT: 9910
+      PROXY_AUTH_WHITELIST: "/v1/*"
 
   yucca:
     image: yuccastream/yucca:0.10.1@sha256:9e3dc1d52a952527000e274e2e22f09b5b6626a630e213997f78e5343aa2eec5
