--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: peerswap
 category: bitcoin
 name: PeerSwap
-version: "1.4.7"
+version: "1.5.6"
 tagline: Balance your lightning channels with Liquid BTC
 description: PeerSwap enables Lightning Network nodes to balance their channels by facilitating atomic swaps with direct peers. PeerSwap enhances decentralization of the Lightning Network by enabling all nodes to be their own swap provider. No centralized coordinator, no 3rd party rent collector, and lowest cost channel balancing means small nodes can better compete with large nodes. Includes Liquid Peg-in functionality.
 developer: PeerSwap Project
@@ -18,6 +18,6 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-submitter: Vlad Goryachev
+submitter: Impa10r
 submission: https://github.com/getumbrel/umbrel-apps/pull/932
-releaseNotes: ""
+releaseNotes: "Adds channel Auto Fee functionality. See full changelog here: https://github.com/Impa10r/peerswap-web/blob/main/CHANGELOG.md"
